# Todo-App

./: .gitignore  README.md  pyproject.toml  skillsdoc.md  subagentsdoc.md
.claude/agents/: cli-systems-agent.md  implementation-planner.md  product-architect-agent.md  quality-review-agent.md  spec-authoring-agent.md  spec-refinement-agent.md
.claude/skills/better-auth-ts/: SKILL.md  examples.md  reference.md
.claude/skills/cli-app-pattern/: SKILL.md
.claude/skills/constitution-guard/: SKILL.md
.claude/skills/fastapi-framework/: SKILL.md
.claude/skills/frontend-api-client/: SKILL.md
.claude/skills/nextjs-setup/: SKILL.md
.claude/skills/react-components/: SKILL.md
.claude/skills/shadcn/: SKILL.md
.claude/skills/spec-writer/: SKILL.md
.specify/memory/: constitution.md
Phase-2/: docker-compose.yml
Phase-2/backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  README_TESTS.md  main.py  migrate_add_advanced_fields.py  migrate_priority_fix.py  pytest.ini  requirements.txt  reset_db.py  test_signup.py  todo.db
Phase-2/frontend/: .env.example  next.config.js  package-lock.json  package.json  tsconfig.json
specs/01-cli-todo-phase1/: plan.md  spec.md  tasks.md
specs/010-fullstack-web-application/: plan.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py  main.py  parser.py
src/models/: __init__.py  task.py
src/services/: __init__.py  filter.py  recurrence.py  reminder.py  search.py  sort.py
tests/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_services.py  test_storage.py  test_task.py
(+132 files in other folders)
